--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@ body{
 
 .nav-link{
     font-size: 30px;
-    color: #6F816B;
+    color: #9793a7;
     margin-left: 10px;
     margin-right: 10px;
 
@@ -84,14 +84,12 @@ body{
   }
 
   .contact-container{
-    /* padding:0px; */
-
-      /* margin-top:10px; */
+       margin-bottom:20px;
   }
 
   .contact-heading
   {
-    color:#7C7790;
+    color:#9793a7;
     font-size: 1.5em;
   }
 
@@ -110,4 +108,49 @@ body{
     margin-bottom: 10px;
     overflow:hidden;     
     width:100%;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 60px;
+    height:auto;
+    text-align: center;
+    text-decoration: none;
+    margin: 15px 5px;
+    border-radius: 50%;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+
+ .menu-container h1 { 
+    display: flex; 
+    flex-direction: row; 
+    margin:0 10px;
+    color:#9793a7;
+} 
+  
+.menu-container h1:before, 
+.menu-container h1:after { 
+    content: ""; 
+    flex: 1 1; 
+    border-bottom: 2px solid whitesmoke; 
+    margin: auto; 
 }
