--- a/CSS/style.css
+++ b/CSS/style.css
@@ -140,17 +140,30 @@ body{
     color: white;
   }
 
- .menu-container h1 { 
-    display: flex; 
-    flex-direction: row; 
-    margin:0 10px;
-    color:#9793a7;
-} 
-  
-.menu-container h1:before, 
-.menu-container h1:after { 
-    content: ""; 
-    flex: 1 1; 
-    border-bottom: 2px solid whitesmoke; 
-    margin: auto; 
-}
+  .menu-container {
+      margin-top: 20px;
+      background-color: rgb(2, 27, 39, 0.4);
+      padding: 10px 0;
+  }
+  .menu-header-row{
+  }
+
+  .menu-header-row h1{
+    /* border: 2px solid white; */
+    padding: 20px;
+    color: #7c7790;
+  }
+
+  .menu-item-container {
+    font-family: 'Marck Script', cursive;
+    font-size: 20px;
+    font-weight: bold;
+      color:#636754;
+      margin:10px 0;
+  }
+
+  .menu-item-span{
+      padding-left: 15px;
+      width: 60%;
+
+  }
