--- a/public/CSS/order-style.css
+++ b/public/CSS/order-style.css
@@ -1,4 +1,180 @@
+/* *{
+    border: 2px solid red;
+
+} */
 body{
+    background-color:black;
+    color:whitesmoke;
+}
+
+a{
+    color:white;
+    text-decoration: none;
+}
+
+.navbar {
+    position:fixed;
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar button{
+
+}
+.navbar-custom
+{
     background-color: black;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+.line-small {
+    width: 30%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 20px auto 40px auto;
+    text-align:center;
+
+}
+
+.wrapper{
+display: flex;
+width: 100%;
+}
+
+#sidebar {
+width: 250px;
+position: fixed;
+/* top: 0; */
+left: 0;
+height: 100vh;
+z-index: 999;
+background: #7386D5;
+color: #fff;
+transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar-collapse{
+    display:block;
+    /* width:200px; */
+}
+
+#sidebar-collapse span{
+    display: inline;
+    margin:0;
+}
+
+
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+#content {
+    background-color: #343A30;
+    width: calc(100% - 250px);
+    padding: 40px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#content.active {
+    width: 100%;
+}
+
+#content h1, h2{
+    text-align: center;
+}
+
+.banner{
+    position: fixed;
+    margin-top:25px;
+    padding:10px;
+    position: relative;
+    background-color: black;
+    overflow:hidden;
+    /* background:url("../Images/background-5.png"); */
+}
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #content {
+        width: 100%;
+    }
+    #content.active {
+        width: calc(100% - 250px);
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
 }
 
