--- a/public/CSS/order-style.css
+++ b/public/CSS/order-style.css
@@ -22,9 +22,6 @@ a{
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.navbar button{
-
-}
 .navbar-custom
 {
     background-color: black;
@@ -40,7 +37,7 @@ a{
     width: 30%;
     height: 1px;
     border-bottom: 1px dashed #ddd;
-    margin: 20px auto 40px auto;
+    margin: 20px auto 50px auto;
     text-align:center;
 
 }
@@ -57,7 +54,7 @@ position: fixed;
 left: 0;
 height: 100vh;
 z-index: 999;
-background: #7386D5;
+background: rgb(115, 134, 213,0.7);
 color: #fff;
 transition: all 0.3s;
 }
@@ -67,8 +64,9 @@ transition: all 0.3s;
 }
 
 #sidebar-collapse{
-    display:block;
+    /* display:block; */
     /* width:200px; */
+    z-index:1;
 }
 
 #sidebar-collapse span{
@@ -80,7 +78,7 @@ transition: all 0.3s;
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: rgb(109, 127, 204);
 }
 
 #sidebar ul.components {
@@ -145,6 +143,7 @@ ul ul a {
 
 #content h1, h2{
     text-align: center;
+    color:rgb(154, 164, 250, 0.8);
 }
 
 .banner{
@@ -156,6 +155,21 @@ ul ul a {
     overflow:hidden;
     /* background:url("../Images/background-5.png"); */
 }
+
+.menu-container{
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.item-title,.item-price, form label{
+    color:rgba(238, 234, 174);
+
+}
+
+.item-title{
+    font-size: 20px;
+    margin-right: 30px;
+}
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
@@ -175,6 +189,10 @@ ul ul a {
     }
     #sidebarCollapse span {
         display: none;
+    }
+    .menu-container{
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
